manifests/services/demo-guestbook-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
