manifests/services/demo-guestbook-redis-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-redis-master
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
