manifests/services/demo-guestbook-redis-slaves.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-redis-slaves
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    role: slave
    tier: backend
