manifests/services/demo-ingress-v1-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    version: v1
spec:
  type: NodePort
  selector:
    app: demo-ingress
    version: v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
