manifests/services/demo-ingress-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-v2
  labels:
    version: v2
spec:
  type: LoadBalancer
  selector:
    app: demo-ingress
    version: v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
