manifests/services/demo-ingress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: demo-service
          servicePort: 80
      - path: /v2
        backend:
          serviceName: demo-service-v2
          servicePort: 80
